Switch to single quotes for ruby

--- a/wd.html
+++ b/wd.html
@@ -389,10 +389,10 @@ driver.navigate().to("https://seleniumhq.github.io/docs/");
  <code class=python>driver.get("https://www.seleniumhq.org")</code>
  <code class=ruby>
 #Convenient
-driver.get "https://www.seleniumhq.org"
+driver.get 'https://www.seleniumhq.org'
 
 #Longer way
-driver.navigate.to "https://seleniumhq.github.io/docs/"
+driver.navigate.to 'https://seleniumhq.github.io/docs/'
  </code>
  <code class=cs>this.driver.Navigate().GoToUrl(@"http://google.com");</code>
 </pre>
