--- a/wd.html
+++ b/wd.html
@@ -853,6 +853,17 @@ alert.accept()
 
 <h2>Web elements</h2>
 
+<p>Represents a DOM element. WebElements can be found by searching from the
+ document root using a WebDriver instance, or by searching under another
+ WebElement:
+
+<p>Using javascript bindings:
+
+<pre><code class=js>driver.get('http://www.google.com')
+    .then(() =>   driver.findElement(By.tagName('form')) )
+    .then((searchForm) => searchForm.findElement(By.name('q')) )
+    .then((searchBox) => searchBox.sendKeys('webdriver') );</code></pre>
+
 <h2>Keyboard</h2>
 
 <h2>Mouse</h2>
