--- a/wd.html
+++ b/wd.html
@@ -857,9 +857,7 @@ alert.accept()
  document root using a WebDriver instance, or by searching under another
  WebElement:
 
-<p>Using javascript bindings:
-
-<pre><code class=js>driver.get('http://www.google.com')
+<pre><code class=javascript>driver.get('http://www.google.com')
     .then(() =>   driver.findElement(By.tagName('form')) )
     .then((searchForm) => searchForm.findElement(By.name('q')) )
     .then((searchBox) => searchBox.sendKeys('webdriver') );</code></pre>
