Demonstrate that options are also capabilities

--- a/attr.html
+++ b/attr.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and attributions</title>
-<link rel=icon type="image/vnd.microsoft.icon" href=favicon.ico>
-<link rel="shortcut icon" type="image/vnd.microsoft.icon" href=favicon.ico>
+<link rel=icon href=favicon.ico type="image/vnd.microsoft.icon">
+<link rel="shortcut icon" href=favicon.ico type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
-<link rel=prev title="The Java Support Package" href=java.html>
-<link rel=next title="Typographical Conventions" href=typo.html>
+<link title="The Java Support Package" rel=prev href=java.html>
+<link title="Typographical Conventions" rel=next href=typo.html>
 <script src=docs.js></script>
 
 <h1>Copyright and attributions</h1>
@@ -30,11 +30,14 @@
 <p>Thanks to:
 
 <div id=authors><ul>
+ <li><a href=mailto:anandj82@gmail.com>Anand Jayaram</a>
  <li><a href=mailto:ato@mozilla.com>Andreas Tolfsen</a>
+ <li><a href=mailto:ato@sny.no>Andreas Tolfsen</a>
  <li><a href=mailto:austenjt@gmail.com>Jon Austen</a>
  <li><a href=mailto:bizob2828@yahoo.com>bizob2828</a>
  <li><a href=mailto:bizob2828@yahoo.com>Bob Evans</a>
  <li><a href=mailto:botalov.andrey@gmail.com>Andrey Botalov</a>
+ <li><a href=mailto:boyband172000@gmail.com>tungla</a>
  <li><a href=mailto:brknthmb@gmail.com>Dan Chan</a>
  <li><a href=mailto:bryangordon@Bryans-MacBook-Pro.local>Bryan Gordon</a>
  <li><a href=mailto:danforkosh@yahoo.com>sheg</a>
@@ -45,9 +48,11 @@
  <li><a href=mailto:djangofan@gmail.com>djangofan</a>
  <li><a href=mailto:djangofan@gmail.com>Jon Thor Austen</a>
  <li><a href=mailto:donhuvy@hotmail.com>Do Nhu Vy</a>
+ <li><a href=mailto:frazzleddad@gmail.com>Jim Holmes</a>
  <li><a href=mailto:gavin@agmen2.co.uk>agmen</a>
  <li><a href=mailto:geth1b@outlook.com>yang458567</a>
  <li><a href=mailto:hardin.brett@gmail.com>Brett Hardin</a>
+ <li><a href=mailto:harry.king@jobsite.co.uk>Harry King</a>
  <li><a href=mailto:hazmeister@gmail.com>Harry King</a>
  <li><a href=mailto:hazmeister@gmail.com>Hazmeister</a>
  <li><a href=mailto:hking@shutterfly.com>hking-shutterfly</a>
@@ -58,8 +63,11 @@
  <li><a href=mailto:james.h.evans.jr@gmail.com>Jim Evans</a>
  <li><a href=mailto:luke.semerau@gmail.com>Luke Inman-Semerau</a>
  <li><a href=mailto:manoj9788@gmail.com>Manoj Kumar</a>
+ <li><a href=mailto:mariano.perdomo@valtech.com>Mariano</a>
  <li><a href=mailto:marilyn@gtf.org>marilyn</a>
  <li><a href=mailto:mark.collin@lazeryattack.com>Mark Collin</a>
+ <li><a href=mailto:martin@phonations.com>Martin Delille</a>
+ <li><a href=mailto:milan.m.masek@gmail.com>Milan Masek</a>
  <li><a href=mailto:mmerrell@gmail.com>mmerrell</a>
  <li><a href=mailto:mmerrell@whalesharkmedia.com>Marcus Merrell</a>
  <li><a href=mailto:natrezek@gmail.com>NRezek</a>
@@ -67,10 +75,13 @@
  <li><a href=mailto:nikai@nikai.net>Nicolas Kaiser</a>
  <li><a href=mailto:oriekenjr@gmail.com>Oscar Rieken</a>
  <li><a href=mailto:picimako@gmail.com>Tamas Balog</a>
+ <li><a href=mailto:rakib-amin@users.noreply.github.com>Mohammad Rakib Amin</a>
  <li><a href=mailto:rivlin.pereira@gmail.com>Rivlin</a>
  <li><a href=mailto:santiycr@gmail.com>Santiago Suarez OrdoÃ±ez</a>
- <li><a href=mailto:tarun.kumar.bhadauria@zalando.de>tarun</a>
+ <li><a href=mailto:shs96c@users.noreply.github.com>Simon Stewart</a>
  <li><a href=mailto:tarun.kumar.bhadauria@zalando.de>Tarun Kumar</a>
+ <li><a href=mailto:tarun.kumar.bhadauria@zalando.de>tarun</a>
+ <li><a href=mailto:user253489@gmail.com>User253489</a>
  <li><a href=mailto:whhone@gmail.com>Wai Hon Law</a>
  <li><a href=mailto:xrobotika@yahoo.com>xrobotika</a>
  <li><a href=mailto:yariv.amar@gmail.com>Yariv Amar</a>
