--- a/guidelines.html
+++ b/guidelines.html
@@ -186,8 +186,8 @@ for more information regarding report outputs for several languages.
 
 <p>Although mentioned in several places it is worth mentioning again.  Ensure tests are isolated from one another.
 <p>Don't share test data. Imagine several tests that each query the database for valid orders before picking one to perform an action on.  Should two tests pick up the same order you are likely to get unexpected behaviour.
-<p>Clear browser state.  Ensure any stored session data or cookies are cleared before the next test is run.
 <p>Clean up stale data in the application that might be picked up by another test e.g. invalid order records.
+<p>Create a new WebDriver instance per test. This helps ensure test isolation and makes parallelisation simpler.
 
 <h2>Test independency</h2>
 
