--- a/drivers.html
+++ b/drivers.html
@@ -38,7 +38,7 @@
 <h2>Driver specific capabilities</h2>
 
 <h3>Firefox</h3>
-<h4>Define Capabilities using FirefoxOptions<h4>
+<h4>Define Capabilities using FirefoxOptions</h4>
 <p>FirefoxOptions is the new way to define capabilities for the Firefox browser and should generally be used in preference to DesiredCapabilities.</p>
 <pre><code class=java>
 FirefoxOptions options = new FirefoxOptions();
