Adding the new Selenium TNG

--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@ search_box.submit()</code></pre>
    <li><a href=intro.html#types_of_testing>Types of testing</a>
    <li><a href=intro.html#about_this_documentation>About this documentation</a>
   </ul></li>
- <li><a href=install.html#selenium_installation>Selenium installation</a>
+ <li><a href=side.html#side>Selenium-IDE</a>
+  <ul>
+   <li><a href=side.html#side-intro>Introduction</a>
+   <li><a href=side.html#side-install>Installing the IDE</a>
+   </li></ul>
+   <li><a href=install.html#selenium_installation>Selenium installation</a>
   <ul>
    <li><a href=install.html#using_browser_specific_jar>Using browser specific JAR</a>
    <li><a href=install.html#using_non_browser_specific_jar>Using non browser specific JAR</a>
