fix review comments on nit selenium-ide

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ search_box.submit()</code></pre>
    <li><a href=intro.html#types_of_testing>Types of testing</a>
    <li><a href=intro.html#about_this_documentation>About this documentation</a>
   </ul></li>
- <li><a href=side.html#side>Selenium-IDE</a>
+ <li><a href=side.html#side>Selenium IDE</a>
   <ul>
    <li><a href=side.html#side-intro>Introduction</a>
    <li><a href=side.html#side-install>Installing the IDE</a>
