--- a/side.html
+++ b/side.html
@@ -12,11 +12,9 @@
 
 <h3>Introduction</h3>
 
-<p>The <em>Selenium-IDE(Integrated Development Environment) </em>is the tool you use to develop your
-    Selenium test cases. It’s an easy-to-use Chrome and Firefox extension and is generally the most
-    efficient way to develop test cases. It records the users actions in the browser for you, using
-    existing Selenium commands, with parameters defined by the context of that element. This is not
-    only a time-saver, but also an excellent way of learning Selenium script syntax.
+<p>The <em>Selenium IDE(Integrated Development Environment)</em> is a record/playback tool that is designed to offer the selenium API and to allow people to export to a programming language.
+    It's an easy-to-use Web Extension, usable in Chrome, Firefox, and any browser that supports that standard. It records the users actions in the browser for you, using
+    existing Selenium commands, with parameters defined by the context of that element.
 
 <h3>Installing the IDE</h3>
 <a class="align-center" href="images/side-install-chrome.png"><img alt="images/side-install-chrome.png" src="images/side-install-chrome.png" style="width: 500px;"></a>
