--- a/side.html
+++ b/side.html
@@ -12,8 +12,8 @@
 
 <h3>Introduction</h3>
 
-<p>The <em>Selenium IDE(Integrated Development Environment)</em> is a record/playback tool that is designed to offer the selenium API and to allow people to export to a programming language.
-    It's an easy-to-use Web Extension, usable in Chrome, Firefox, and any browser that supports that standard. It records the users actions in the browser for you, using
+<p>The <em>Selenium IDE(Integrated Development Environment)</em> is an easy-to-use record/playback tool designed to allow anyone to quickly record tests that use Selenium.
+    It's a Web Extension, which means it will work in browsers such as Chrome, Firefox, and any other browser that supports the standard. It records the users actions in the browser for you, using
     existing Selenium commands, with parameters defined by the context of that element.
 
 <h3>Installing the IDE</h3>
