fix nit selenium-ide

--- a/side.html
+++ b/side.html
@@ -8,7 +8,7 @@
 <link rel=next href=install.html title=Install>
 <script src=docs.js></script>
 
-<h1>Selenium-IDE</h1>
+<h1>Selenium IDE</h1>
 
 <h3>Introduction</h3>
 
