--- a/index.html
+++ b/index.html
@@ -64,16 +64,15 @@ public class HelloSelenium {
 from selenium.webdriver.common.by import By
 from selenium.webdriver.common.keys import Keys
 from selenium.webdriver.support.ui import WebDriverWait
-from selenium.webdriver.support import expected_conditions as EC
+from selenium.webdriver.support.expected_conditions import presence_of_element_located
 
-driver = webdriver.Firefox()
-try:
+with webdriver.Firefox() as driver:
+    wait = WebDriverWait(driver, 10)
     driver.get("http://google.com/ncr")
     driver.find_element_by_name("q").send_keys("cheese" + Keys.RETURN)
-    first_result = WebDriverWait(driver, 10).until(EC.presence_of_element_located((By.CSS_SELECTOR, "h3>a")))
+    first_result = wait.until(presence_of_element_located((By.CSS_SELECTOR, "h3>a")))
     print(first_result.text)
-finally:
-    driver.quit()</code>
+</code>
  <code class=javascript>const {Builder, By, Key, until} = require('selenium-webdriver');
 
 (async function example() {
