Added a comment explaining Selenium 3.13 is needed for context manager support

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ from selenium.webdriver.common.keys import Keys
 from selenium.webdriver.support.ui import WebDriverWait
 from selenium.webdriver.support.expected_conditions import presence_of_element_located
 
+#This example requires Selenium WebDriver 3.13 or newer
 with webdriver.Firefox() as driver:
     wait = WebDriverWait(driver, 10)
     driver.get("http://google.com/ncr")
