Remove square brackets around send_keys in ruby example

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ wait = Selenium::WebDriver::Wait.new(timeout: 10)
 
 begin
     driver.get 'http://google.com'
-    driver.find_element(name: 'q').send_keys ['cheese', :return]
+    driver.find_element(name: 'q').send_keys 'cheese', :return
     first_result = wait.until { driver.find_element(css: 'h3>a') }
     print first_result.text
 ensure
