rewording Selenium ide section (#181)

--- a/side.html
+++ b/side.html
@@ -8,15 +8,13 @@
 <link rel=next href=install.html title=Install>
 <script src=docs.js></script>
 
-<h1>Selenium-IDE</h1>
+<h1>Selenium IDE</h1>
 
 <h3>Introduction</h3>
 
-<p>The <em>Selenium-IDE(Integrated Development Environment) </em>is the tool you use to develop your
-    Selenium test cases. It’s an easy-to-use Chrome and Firefox extension and is generally the most
-    efficient way to develop test cases. It records the users actions in the browser for you, using
-    existing Selenium commands, with parameters defined by the context of that element. This is not
-    only a time-saver, but also an excellent way of learning Selenium script syntax.
+<p>The <em>Selenium IDE(Integrated Development Environment)</em> is an easy-to-use record/playback tool designed to allow anyone to quickly record tests that use Selenium.
+    It's a Web Extension, which means it will work in browsers such as Chrome, Firefox, and any other browser that supports the standard. It records the users actions in the browser for you, using
+    existing Selenium commands, with parameters defined by the context of that element.
 
 <h3>Installing the IDE</h3>
 <a class="align-center" href="images/side-install-chrome.png"><img alt="images/side-install-chrome.png" src="images/side-install-chrome.png" style="width: 500px;"></a>
