--- a/index.html
+++ b/index.html
@@ -35,13 +35,101 @@
  Here is one of the simplest instructions you can make:
 
 <!-- TODO(ato): We should find a better example.  Perhaps Todo list? -->
-<pre><code class=python>from selenium import webdriver
+<pre>
+ <code class=java>import org.openqa.selenium.By;
+import org.openqa.selenium.Keys;
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
+import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.support.ui.WebDriverWait;
 
-driver = webdriver.Firefox()
-driver.get("http://google.com/?hl=en")
-search_box = driver.find_element_by_name("q")
-search_box.send_keys("cheese")
-search_box.submit()</code></pre>
+import static org.openqa.selenium.support.ui.ExpectedConditions.presenceOfElementLocated;
+
+public class HelloSelenium {
+
+    public static void main(String[] args) {
+        WebDriver driver = new FirefoxDriver();
+        WebDriverWait wait = new WebDriverWait(driver, 10);
+        try {
+            driver.get("http://google.com/ncr");
+            driver.findElement(By.name("q")).sendKeys("cheese" + Keys.ENTER);
+            WebElement firstResult = wait.until(presenceOfElementLocated(By.cssSelector("h3>a")));
+            System.out.println(firstResult.getText());
+        } finally {
+            driver.quit();
+        }
+    }
+}</code>
+ <code class=python>from selenium import webdriver
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from selenium.webdriver.support.ui import WebDriverWait
+from selenium.webdriver.support.expected_conditions import presence_of_element_located
+
+#This example requires Selenium WebDriver 3.13 or newer
+with webdriver.Firefox() as driver:
+    wait = WebDriverWait(driver, 10)
+    driver.get("http://google.com/ncr")
+    driver.find_element_by_name("q").send_keys("cheese" + Keys.RETURN)
+    first_result = wait.until(presence_of_element_located((By.CSS_SELECTOR, "h3>a")))
+    print(first_result.text)</code>
+ <code class=cs>using System;
+using Microsoft.VisualStudio.TestTools.UnitTesting;
+using OpenQA.Selenium;
+using OpenQA.Selenium.Firefox;
+using OpenQA.Selenium.Support.UI;
+
+namespace Selenium.Docs
+{
+    [TestClass]
+    public class HelloSelenium
+    {
+        private static IWebDriver driver;
+
+        [TestMethod]
+        public void Example()
+        {
+            driver = new FirefoxDriver();
+            WebDriverWait wait = new WebDriverWait(driver, TimeSpan.FromSeconds(10));
+            driver.Navigate().GoToUrl("http://www.google.com/ncr");
+            driver.FindElement(By.Name("q")).SendKeys("cheese" + Keys.Return);
+            IWebElement firstResult = wait.Until(wd => wd.FindElement(By.CssSelector("h3>a")));
+            Console.WriteLine(firstResult.Text);
+        }
+
+        [TestCleanup]
+        public void TearDown()
+        {
+            driver.Quit();
+        }
+    }
+}</code>
+ <code class=ruby>require 'selenium-webdriver'
+
+driver = Selenium::WebDriver.for :firefox
+wait = Selenium::WebDriver::Wait.new(timeout: 10)
+
+begin
+    driver.get 'http://google.com'
+    driver.find_element(name: 'q').send_keys 'cheese', :return
+    first_result = wait.until { driver.find_element(css: 'h3>a') }
+    print first_result.text
+ensure
+    driver.quit
+end</code>
+ <code class=javascript>const {Builder, By, Key, until} = require('selenium-webdriver');
+
+(async function example() {
+    let driver = await new Builder().forBrowser('firefox').build();
+    try {
+        await driver.get('http://www.google.com/ncr');
+        await driver.findElement(By.name('q')).sendKeys('cheese', Key.RETURN);
+        let firstResult = await driver.wait(until.elementLocated(By.css('h3>a')),10000);
+        console.log(await firstResult.getText());
+    } finally {
+        await driver.quit();
+    }
+})();</code></pre>
 
 <p>See the <em><a href=quick.html>Quick Tour</a></em>
  for a full explanation
