added grid image and minor text edits

--- a/grid.html
+++ b/grid.html
@@ -25,15 +25,14 @@
  and to manage different browser versions and browser configurations centrally
  (instead of in each individual test).
 
-<h2>Pros and cons</h2>
-
 <p>Selenium Grid isn't a silver bullet.
  It solves a subset of common delegation and distribution problems,
  but will for example not manage your infrastructure
  and might not suit your specific needs.
 
-<h3>Main purpose and functionalities of Selenium Grid</h3>
+<h2>Main purpose and functionality of a Selenium Grid</h2>
 <dl>
+    <dt>Central entry point for all tests</dt>
     <dt>Management and control of the nodes / environment where the browsers run on</dt>
     <dt>Scaling</dt>
     <dt>Running tests in parallel</dt>
@@ -41,7 +40,10 @@
     <dt>Load balancing</dt>
 </dl>
 
-<h2>What components of a Selenium Grid</h2>
+<h2>Components of a Selenium Grid</h2>
+
+<img src="images/grid.png">
+
 <dl>
     <dt>Hub</dt>
     <ul>
